Add reservations
