# app/src/main/scala/com/cargo/api/package.scala
@@ -1,12 +1,26 @@
 package com.cargo
 
-import com.cargo.api.generated.definitions.dto.{CarOfferRes, Feature, Point, ImageUrl}
+import com.cargo.api.generated.definitions.dto.{CarOfferRes, Feature, ImageUrl, Point, Reservation => ReservationDTO}
 import io.scalaland.chimney.dsl._
 import cats.syntax.option._
-import com.cargo.model.CarOffer
+import com.cargo.algebra.{Authentication, CarOffers, Reservations, UserManager}
+import com.cargo.model.{CarOffer, Reservation}
+
+import java.time.{LocalDate, ZoneOffset}
+import java.util.UUID
+import scala.util.Try
 
 package object api {
+  type Infrastructure = Authentication with CarOffers with Reservations with UserManager
+
   def parseToken(bearerToken: String): String = bearerToken.drop(7)
+
+  def mapReservations: PartialFunction[Reservation, ReservationDTO] =
+    _.into[ReservationDTO]
+      .withFieldComputed(_.from, r => LocalDate.ofInstant(r.startDate, ZoneOffset.UTC))
+      .withFieldComputed(_.to, r => LocalDate.ofInstant(r.endDate, ZoneOffset.UTC))
+      .withFieldComputed(_.renterId, _.renterId.value.toString)
+      .transform
 
   def mapCarOffer: PartialFunction[CarOffer, CarOfferRes] =
     _.into[CarOfferRes]
@@ -19,4 +33,6 @@ package object api {
       )
       .withFieldComputed(_.images, _.imageUrls.map(url => ImageUrl(url.some)).toVector)
       .transform
+
+  def parseUUID(str: String): Option[UUID] = Try(UUID.fromString(str)).toOption
 }
